# tordo

./: Cargo.toml  flake.nix
src/: main.rs  notes
